--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="background_gradient_end">#DDDDDD</color>
     <color name="fastlane_background">#4073c8</color>
     <color name="search_opaque">#ffaa3f</color>
-    <color name="selected_background">#4073c8</color>
+    <color name="selected_background">#202020</color>
     <color name="default_background">#3d3d3d</color>
 </resources>
