--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -106,9 +106,12 @@
         <Button
             android:id="@+id/button1"
             style="?attr/detailsActionButtonStyle"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:drawableStart="@drawable/ic_baseline_home_24"
+            android:drawablePadding="12dp"
+            android:textDirection="locale"
+            android:textAlignment="viewStart"
             android:text="@string/home"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -118,10 +121,13 @@
         <Button
             android:id="@+id/button2"
             style="?attr/detailsActionButtonStyle"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/add_favorite"
-            android:gravity="center"
+            android:drawableStart="@drawable/ic_baseline_star_24"
+            android:drawablePadding="12dp"
+            android:textDirection="locale"
+            android:textAlignment="viewStart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button3"
             app:layout_constraintStart_toEndOf="@+id/button1"
@@ -130,10 +136,13 @@
         <Button
             android:id="@+id/button3"
             style="?attr/detailsActionButtonStyle"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/external_link"
-            android:gravity="center"
+            android:drawableStart="@drawable/ic_baseline_web_24"
+            android:drawablePadding="12dp"
+            android:textDirection="locale"
+            android:textAlignment="viewStart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button4"
             app:layout_constraintStart_toEndOf="@+id/button2"
@@ -142,10 +151,13 @@
         <Button
             android:id="@+id/button4"
             style="?attr/detailsActionButtonStyle"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/next"
-            android:gravity="center"
+            android:drawableStart="@drawable/ic_baseline_fast_forward_24"
+            android:drawablePadding="12dp"
+            android:textDirection="locale"
+            android:textAlignment="viewStart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/button3"
             app:layout_constraintTop_toTopOf="@+id/menu" />
@@ -153,10 +165,13 @@
         <Button
             android:id="@+id/button5"
             style="?attr/detailsActionButtonStyle"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/stop"
-            android:gravity="center"
+            android:drawableStart="@drawable/ic_baseline_stop_24"
+            android:drawablePadding="12dp"
+            android:textDirection="locale"
+            android:textAlignment="viewStart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/guideline_end"
             app:layout_constraintTop_toTopOf="@+id/menu" />
