--- a/app/src/main/res/values/values.xml
+++ b/app/src/main/res/values/values.xml
@@ -1341,11 +1341,11 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:ellipsize">end</item>
-        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:fontFamily">sans-serif</item>
         <item name="android:gravity">start</item>
         <item name="android:maxLines">2</item>
         <item name="android:textColor">#FFF1F1F1</item>
-        <item name="android:textSize">36sp</item>
+        <item name="android:textSize">35sp</item>
         <item name="android:textAlignment">viewStart</item>
         <item name="android:paddingBottom">4dp</item>
         <item name="android:paddingTop">2dp</item>
