--- a/app/src/main/res/layout/activity_news_v.xml
+++ b/app/src/main/res/layout/activity_news_v.xml
@@ -20,10 +20,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent=".02" />
+            app:layout_constraintGuide_percent=".05" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_center"
+            android:id="@+id/guideline_bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent=".97" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_center_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".45" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_center_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -34,28 +48,29 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent=".02" />
+            app:layout_constraintGuide_percent=".05" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent=".98 " />
+            app:layout_constraintGuide_percent=".95 " />
 
         <ImageView
             android:id="@+id/photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitStart"            app:newsImage="@{imageUrl}"
+            android:scaleType="fitStart"
+            app:newsImage="@{imageUrl}"
             android:contentDescription="@{news.title}"
-            app:layout_constraintStart_toStartOf="@id/guideline_center"
+            app:layout_constraintStart_toStartOf="@id/guideline_center_image"
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:id="@+id/menu"
             android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_height="75dp"
             android:background="@color/lb_guidedactions_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,9 +85,8 @@
             android:textColor="#ffffff"
             android:textSize="28sp"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@id/guideline_top"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent=".46" />
+            app:layout_constraintEnd_toStartOf="@+id/guideline_center_text"
+            app:layout_constraintTop_toBottomOf="@id/guideline_top" />
 
         <TextView
             android:id="@+id/article"
@@ -83,10 +97,9 @@
             android:text="@{news.article}"
             android:textColor="#ffffff"
             android:textSize="22sp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_center_text"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@id/title"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent=".46" />
+            app:layout_constraintTop_toBottomOf="@id/title" />
 
         <TextView
             android:id="@+id/sources"
@@ -97,84 +110,78 @@
             android:gravity="end"
             android:text="@{credits}"
             android:textColor="#ffffff"
-            android:textSize="19sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/menu"
-            app:layout_constraintStart_toEndOf="@id/guideline_start"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent=".46" />
+            app:layout_constraintEnd_toStartOf="@+id/guideline_center_text"
+            app:layout_constraintStart_toEndOf="@id/guideline_start" />
 
         <Button
             android:id="@+id/button1"
             style="?attr/detailsActionButtonStyle"
             android:layout_width="150dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:drawableStart="@drawable/ic_baseline_home_24"
             android:drawablePadding="12dp"
             android:textDirection="locale"
             android:textAlignment="viewStart"
             android:text="@string/home"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/button2"
-            app:layout_constraintTop_toTopOf="@+id/menu" />
+            app:layout_constraintStart_toStartOf="@+id/guideline_start"
+            app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
+            app:layout_constraintEnd_toStartOf="@+id/button2" />
 
         <Button
             android:id="@+id/button2"
             style="?attr/detailsActionButtonStyle"
             android:layout_width="150dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:text="@string/add_favorite"
             android:drawableStart="@drawable/ic_baseline_star_24"
             android:drawablePadding="12dp"
             android:textDirection="locale"
             android:textAlignment="viewStart"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
             app:layout_constraintEnd_toStartOf="@+id/button3"
-            app:layout_constraintStart_toEndOf="@+id/button1"
-            app:layout_constraintTop_toTopOf="@+id/menu" />
+            app:layout_constraintStart_toEndOf="@+id/button1" />
 
         <Button
             android:id="@+id/button3"
             style="?attr/detailsActionButtonStyle"
             android:layout_width="150dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:text="@string/external_link"
             android:drawableStart="@drawable/ic_baseline_web_24"
             android:drawablePadding="12dp"
             android:textDirection="locale"
             android:textAlignment="viewStart"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
             app:layout_constraintEnd_toStartOf="@+id/button4"
-            app:layout_constraintStart_toEndOf="@+id/button2"
-            app:layout_constraintTop_toTopOf="@+id/menu" />
+            app:layout_constraintStart_toEndOf="@+id/button2" />
 
         <Button
             android:id="@+id/button4"
             style="?attr/detailsActionButtonStyle"
             android:layout_width="150dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:text="@string/next"
             android:drawableStart="@drawable/ic_baseline_fast_forward_24"
             android:drawablePadding="12dp"
             android:textDirection="locale"
             android:textAlignment="viewStart"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/button3"
-            app:layout_constraintTop_toTopOf="@+id/menu" />
+            app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
+            app:layout_constraintStart_toEndOf="@+id/button3" />
 
         <Button
             android:id="@+id/button5"
             style="?attr/detailsActionButtonStyle"
             android:layout_width="150dp"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:text="@string/stop"
             android:drawableStart="@drawable/ic_baseline_stop_24"
             android:drawablePadding="12dp"
             android:textDirection="locale"
             android:textAlignment="viewStart"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
-            app:layout_constraintTop_toTopOf="@+id/menu" />
+            app:layout_constraintBottom_toBottomOf="@+id/guideline_bottom"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_end" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
