--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <resources>
+    <color name="first_color">#111111</color>
+    <color name="second_color">#4073c8</color>
+    <color name="font_color">#ffffff</color>
+    <color name="selected_color">#303030</color>
+
     <color name="background_gradient_start">#000000</color>
     <color name="background_gradient_end">#DDDDDD</color>
-    <color name="fastlane_background">#4073c8</color>
-    <color name="search_opaque">#ffaa3f</color>
-    <color name="selected_background">#202020</color>
-    <color name="default_background">#3d3d3d</color>
 </resources>
