--- a/app/src/main/res/layout/activity_news_h.xml
+++ b/app/src/main/res/layout/activity_news_h.xml
@@ -11,7 +11,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/fastlane_background"
+        android:background="@color/second_color"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -56,7 +56,7 @@
             android:id="@+id/menu"
             android:layout_width="0dp"
             android:layout_height="75dp"
-            android:background="@color/lb_guidedactions_background"
+            android:background="@color/first_color"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
@@ -68,8 +68,8 @@
             android:layout_marginTop="5dp"
             android:fontFamily="sans-serif-black"
             android:text="@{news.title}"
-            android:textColor="#ffffff"
-            android:textSize="22sp"
+            android:textColor="@color/font_color"
+            android:textSize="21sp"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintTop_toBottomOf="@id/guideline_top" />
@@ -81,8 +81,8 @@
             android:layout_marginTop="16dp"
             android:fontFamily="sans-serif"
             android:text="@{news.article}"
-            android:textColor="#ffffff"
-            android:textSize="18sp"
+            android:textColor="@color/font_color"
+            android:textSize="17sp"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintTop_toBottomOf="@id/title"
             app:layout_constraintEnd_toEndOf="@id/guideline_end" />
@@ -95,8 +95,8 @@
             android:fontFamily="sans-serif"
             android:gravity="end"
             android:text="@{credits}"
-            android:textColor="#ffffff"
-            android:textSize="16sp"
+            android:textColor="@color/font_color"
+            android:textSize="15sp"
             app:layout_constraintBottom_toTopOf="@id/menu"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintEnd_toEndOf="@id/guideline_end" />
