--- a/app/src/main/res/layout/activity_news_v.xml
+++ b/app/src/main/res/layout/activity_news_v.xml
@@ -11,7 +11,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/fastlane_background"
+        android:background="@color/second_color"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -71,7 +71,7 @@
             android:id="@+id/menu"
             android:layout_width="0dp"
             android:layout_height="75dp"
-            android:background="@color/lb_guidedactions_background"
+            android:background="@color/first_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
@@ -83,7 +83,7 @@
             android:fontFamily="sans-serif-black"
             android:text="@{news.title}"
             android:textColor="#ffffff"
-            android:textSize="28sp"
+            android:textSize="21sp"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintEnd_toStartOf="@+id/guideline_center_text"
             app:layout_constraintTop_toBottomOf="@id/guideline_top" />
@@ -96,7 +96,7 @@
             android:fontFamily="sans-serif"
             android:text="@{news.article}"
             android:textColor="#ffffff"
-            android:textSize="22sp"
+            android:textSize="17sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline_center_text"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintTop_toBottomOf="@id/title" />
@@ -110,7 +110,7 @@
             android:gravity="end"
             android:text="@{credits}"
             android:textColor="#ffffff"
-            android:textSize="18sp"
+            android:textSize="15sp"
             app:layout_constraintBottom_toTopOf="@id/menu"
             app:layout_constraintEnd_toStartOf="@+id/guideline_center_text"
             app:layout_constraintStart_toEndOf="@id/guideline_start" />
