--- a/app/src/main/res/layout/activity_news_h.xml
+++ b/app/src/main/res/layout/activity_news_h.xml
@@ -16,6 +16,20 @@
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_center_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".45" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_center_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".50" />
+
+        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -65,12 +79,12 @@
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:fontFamily="sans-serif-black"
+            android:layout_marginTop="12dp"
+            android:fontFamily="sans-serif"
             android:text="@{news.title}"
             android:textColor="@color/font_color"
-            android:textSize="21sp"
-            app:layout_constraintEnd_toEndOf="@id/guideline_end"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toEndOf="@id/guideline_center_1"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintTop_toBottomOf="@id/guideline_top" />
 
@@ -78,13 +92,14 @@
             android:id="@+id/article"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:fontFamily="sans-serif"
             android:text="@{news.article}"
             android:textColor="@color/font_color"
-            android:textSize="17sp"
-            app:layout_constraintStart_toEndOf="@id/guideline_start"
-            app:layout_constraintTop_toBottomOf="@id/title"
+            android:textSize="18sp"
+            android:lineSpacingExtra="3sp"
+            app:layout_constraintStart_toEndOf="@id/guideline_center_2"
+            app:layout_constraintTop_toBottomOf="@id/guideline_top"
             app:layout_constraintEnd_toEndOf="@id/guideline_end" />
 
         <TextView
@@ -97,9 +112,10 @@
             android:text="@{credits}"
             android:textColor="@color/font_color"
             android:textSize="15sp"
+            android:lineSpacingExtra="3sp"
             app:layout_constraintBottom_toTopOf="@id/menu"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
-            app:layout_constraintEnd_toEndOf="@id/guideline_end" />
+            app:layout_constraintEnd_toEndOf="@id/guideline_center_1" />
 
         <Button
             android:id="@+id/button1"
