--- a/app/src/main/res/layout/activity_news_v.xml
+++ b/app/src/main/res/layout/activity_news_v.xml
@@ -80,10 +80,11 @@
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-black"
+            android:fontFamily="sans-serif"
             android:text="@{news.title}"
             android:textColor="#ffffff"
-            android:textSize="21sp"
+            android:textSize="25sp"
+            android:lineSpacingExtra="3sp"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintEnd_toStartOf="@+id/guideline_center_text"
             app:layout_constraintTop_toBottomOf="@id/guideline_top" />
@@ -92,11 +93,12 @@
             android:id="@+id/article"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:fontFamily="sans-serif"
             android:text="@{news.article}"
             android:textColor="#ffffff"
-            android:textSize="17sp"
+            android:textSize="18sp"
+            android:lineSpacingExtra="3sp"
             app:layout_constraintEnd_toStartOf="@+id/guideline_center_text"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintTop_toBottomOf="@id/title" />
@@ -111,6 +113,7 @@
             android:text="@{credits}"
             android:textColor="#ffffff"
             android:textSize="15sp"
+            android:lineSpacingExtra="3sp"
             app:layout_constraintBottom_toTopOf="@id/menu"
             app:layout_constraintEnd_toStartOf="@+id/guideline_center_text"
             app:layout_constraintStart_toEndOf="@id/guideline_start" />
